# lrquant

./: .env  .gitignore  README.md  datautils.py  generate_act_scale_shift.py  main.py  pyproject.toml  utils.py
lm_eval/tasks/: race.py
models/: LMClass.py  int_llama_layer.py  int_opt_layer.py  transformation.py
quantize/: RLQuant.py  int_linear.py  quantizer.py  utils.py  weighted_mse.py
scripts/: .gitignore  Untitled-1.ipynb  activation_df.ipynb  outliers.ipynb  plot_activation.ipynb  plot_log.py  profile.py  quant_eval.sh  test_model.ipynb  test_plot_log.ipynb  testbed.ipynb  utils.py
